--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <title>Chatty</title>
 </head>
 <body>
-  <nav class="navbar">
-    <a href="/" class="navbar-brand">Chatty</a>
-  </nav>
 
-  <div id="react-root"></div>
+
+  <main id="react-root"></main>
   <script src="/build/bundle.js"></script>
 </body>
 </html>
